--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,8 @@
-$border: 1px solid black;
-$bg: rgba(0, 0, 0, 0.8);
+$border: 1px solid white;
 $transition: all 250ms ease-in-out;
+$box-shadow: 0px 0px 1px 0px #646b80;
+$bg: rgb(23, 23, 26);
+$bg1: #222531;
 
 html,
 body {
@@ -17,6 +19,8 @@ body {
   background-repeat: no-repeat;
   min-height: 100vh;
   background-size: cover;
+  background: $bg1;
+  color: #fff;
 }
 
 a {
@@ -31,6 +35,10 @@ a {
 }
 
 $border: 1px solid black;
+
+.flex-row {
+  display: flex;
+}
 
 .banner {
   width: 100%;
@@ -80,22 +88,28 @@ $border: 1px solid black;
   justify-content: center;
   position: relative;
   .crypto-card {
-    height: 70px;
-    width: 300px;
+    width: 250px;
     margin: 1rem;
     display: flex;
-    border: 1px solid white;
-    align-items: center;
-    padding: 1rem;
-    border-radius: 10px;
+    flex-direction: column;
+    padding: 0.5rem;
+    border-radius: 5px;
     position: relative;
     overflow: hidden;
-    color: white;
     cursor: pointer;
-    transition: $transition;
-    transform: scale(1);
-    &:hover {
-      transform: scale(1.1);
+    color: #fff;
+    -box-shadow: $box-shadow;
+    .card-upper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid gray;
+      padding-bottom: 0.5rem;
+      z-index: 2;
+    }
+    .card-lower {
+      padding: 0.5rem;
+      z-index: 2;
     }
     .overlay {
       height: 100%;
@@ -103,11 +117,8 @@ $border: 1px solid black;
       position: absolute;
       background: $bg;
       left: 0;
-    }
-    .crypto-name {
-      margin-left: 0.5rem;
-      z-index: 2;
-      padding: 0.4rem;
+      top: 0;
+      bottom: 0;
     }
   }
 }
